objects/PC_Request_Form__c.object
<CustomObject>
    <description>To track the consent templates that exist for different programs, their versions, and so on.</description>
    <fields>
        <fullName>PC_Active__c</fullName>
        <description>Indicates if the request/consent form is active and can be used.</description>
        <formula>IF( (ISBLANK( PC_Retirement_Date__c ) ||  ISNULL(PC_Retirement_Date__c ) || 
     PC_Retirement_Date__c &gt;= TODAY()) &amp;&amp;  NOT(ISBLANK(PC_Release_Date__c)) , true, false)</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Engagement_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contains the engagement program detail.</description>
        <label>Engagement Program</label>
        <referenceTo>PC_Engagement_Program__c</referenceTo>
        <relationshipLabel>Request Forms</relationshipLabel>
        <relationshipName>PC_Request_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_External_Id__c</fullName>
        <description>The user-entered unique form name or code.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PC_Release_Date__c</fullName>
        <description>The date on which the current version of request form/consent form was released.</description>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Retirement_Date__c</fullName>
        <description>The date on which the current version of request form/consent form was retired.</description>
        <label>Retirement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Script__c</fullName>
        <description>The content in the request/consent form.</description>
        <label>Script</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_Version__c</fullName>
        <description>The version name of the request form.</description>
        <label>Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Request Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Request Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>